--- a/style.css
+++ b/style.css
@@ -16,3 +16,9 @@ font-size:20px;
 text-align: center;
 color:black;
  }
+img{
+    align-items: center;
+    justify-content: center;
+    width: 200px;
+    height: 290px;
+   }
