--- a/style.css
+++ b/style.css
@@ -22,3 +22,16 @@ img{
     width: 200px;
     height: 290px;
    }
+     .vid{
+width: 100%;
+height: 100%;
+display: flex;
+ justify-content: center;
+ align-items: center;
+ overflow: hidden; 
+      }
+  .aud{
+      display: flex;
+      justify-content: center;
+      align-items: center;
+  }    
