--- a/style.css
+++ b/style.css
@@ -35,3 +35,12 @@ display: flex;
       justify-content: center;
       align-items: center;
   }    
+    #datetime{
+      display: block;
+      align-text: center;
+      font-weight: bold;
+      padding: 20px;
+      font-size: 20px;
+      font-family: Arial, sans-serif;
+     
+  }
